--- a/api/package.json
+++ b/api/package.json
@@ -1,15 +1,16 @@
 {
   "name": "functions",
   "scripts": {
-    "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
     "build:watch": "tsc --watch",
+    "deploy": "firebase deploy --only functions",
+    "emulators": "npm run build -- --watch | firebase emulators:start --only functions",
+    "logs": "firebase functions:log",
+    "lint": "eslint --ext .js,.ts .",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log",
-    "emulators": "npm run build -- --watch | firebase emulators:start --only functions"
+    "test": "jest"
   },
   "engines": {
     "node": "20"
@@ -28,6 +29,7 @@
     "randomstring": "^1.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/spotify-api": "^0.0.25",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
@@ -35,6 +37,8 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.1.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.5",
     "typescript": "^4.9.0"
   },
   "private": true
