--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,10 +29,16 @@ jobs:
           cd api
           npm run test-ci
 
+      - name: Upload test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: api/reports/jest-junit.xml
+    
       - name: Test Report
         uses: dorny/test-reporter@v1
-        if: success() || failure() # run this step even if previous step failed
+        if: github.event_name == 'pull_request'
         with:
-          name: JEST Tests # Name of the check run which will be created
-          path: reports/jest-*.xml # Path to test results
-          reporter: jest-junit # Format of test results
+          name: JEST Tests
+          path: api/reports/jest-junit.xml
+          reporter: jest-junit
