--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,7 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "test": "jest",
-    "test-ci": "jest --ci --reporters=default --reporters=jest-junit"
+    "test-ci": "jest --ci --reporters=default --reporters=jest-junit --coverage --coverageReporters json-summary"
   },
   "engines": {
     "node": "20"
