--- a/ios/dj-heartbeat/Info.plist
+++ b/ios/dj-heartbeat/Info.plist
@@ -21,5 +21,11 @@
 	<array>
 		<string>spotify</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
+	<key>kTCCServiceMediaLibrary</key>
+	<string>This app requires access to your Apple Music library to play and manage your music.</string>
 </dict>
 </plist>
